@@ -1,3 +1,10 @@
+Mon Feb  4 11:58:14 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
+
+	* ROADMAP: Updated
+
+	* src/keybind.c (on_KB_button_delete_clicked): Segfault fix,
+	now uses correct profile data.
+
 Mon Feb  4 11:22:15 CET 2002  Robin Ericsson  <lobbin@localhost.nu>
 
 	* src/init.c: More MCCP #ifdef's
